fix: landing page layout, updated height, spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ main {
 
 .main--landing {
     overflow: hidden;
+    min-height: 100vh;
 }
 
 #header {
@@ -29,11 +30,13 @@ main {
 }
 
 .main__hero {
-    margin: 140px auto;
-    width: 60%;
+    margin: 0 auto;
+    width: 65%;
+    height: 100%;
     display: flex;
     flex-flow: column;
     align-items: center;
+    justify-content: center;
 }
 
 .hero {
